[package]
name = "nom-rule"
version = "0.2.2"
authors = ["andylokandy"]
edition = "2021"
license = "MIT"
description = "A procedural macro for defining nom combinators in simple DSL"
homepage = "https://github.com/andylokandy/nom-rule"
repository = "https://github.com/andylokandy/nom-rule"
documentation = "https://docs.rs/nom-rule"
readme = "README.md"
keywords = ["nom", "parsing", "generator", "pest", "macro"]

[lib]
proc-macro = true

[dependencies]
nom = "7"
syn = "1"
quote = "1"
pratt = "0.3"
proc-macro2 = { version = "1", features = ["span-locations"] }
proc-macro-error = "1"

[dev-dependencies]
logos = "0.12"

[features]
auto-sequence = []
