[package]
name = "nom-rule"
version = "0.4.0"
authors = ["andylokandy"]
edition = "2021"
license = "MIT"
description = "A procedural macro for writing nom parsers using a grammar-like DSL."
homepage = "https://github.com/andylokandy/nom-rule"
repository = "https://github.com/andylokandy/nom-rule"
readme = "README.md"
keywords = ["nom", "parser", "grammar", "DSL", "parsing"]

[lib]
proc-macro = true

[dependencies]
nom = "7"
pratt = "0.4"
proc-macro-error2 = "2.0.1"
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"
syn = "2"

[dev-dependencies]
logos = "0.14"
