[package]
name = "nom-rule"
version = "0.5.1"
edition = "2021"
rust-version = "1.80.0"
license = "MIT"
description = "A procedural macro for writing nom parsers using a grammar-like DSL."
homepage = "https://github.com/andylokandy/nom-rule"
repository = "https://github.com/andylokandy/nom-rule"
readme = "README.md"
keywords = ["nom", "parser", "grammar", "DSL", "parsing"]

[lib]
proc-macro = true

[dependencies]
nom = { version = "8" }
pratt = { version = "0.4" }
proc-macro-error2 = { version = "2" }
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = { version = "1" }
syn = { version = "2" }

[dev-dependencies]
logos = { version = "0.15" }
